--- a/front/src/app/routes/activities/popin-edit-activities/popin-edit-activities.component.scss
+++ b/front/src/app/routes/activities/popin-edit-activities/popin-edit-activities.component.scss
@@ -103,6 +103,7 @@
   }
 }
 
+
 .contentieux-header {
   display: flex;
   border-bottom: 2px solid fColor(cblack);
@@ -212,6 +213,10 @@
   align-items: center;
   height: 56px;
   width: 100%;
+
+  &.is-windows {
+    padding-right: 15px;
+  }
 
   .contentieux-item-label {
     padding: 16px;
